# Mono1

./: .gitignore  .travis.yml  CMakeLists.txt  PS_PNGExporter.js  PS_SpriteExporter.js  README.md  main.cpp  run_editor.sh  run_game.sh  run_task.sh  run_unittest.sh
.github/workflows/: cmake.yml
AnimationTool/: Animator.cpp  Animator.h  InterfaceDrawer.cpp  InterfaceDrawer.h  MutableSprite.cpp  MutableSprite.h  SpriteTexture.cpp  SpriteTexture.h  UIContext.h  WriteSpriteFile.cpp  WriteSpriteFile.h  main.cpp
Editor/: Editor.cpp  Editor.h  EditorConfig.cpp  EditorConfig.h  EntityRepository.cpp  EntityRepository.h  Grabber.h  IObjectProxy.h  ImGuiInputHandler.cpp  ImGuiInterfaceDrawer.cpp  ImGuiInterfaceDrawer.h  ImGuiRenderer.cpp  ImGuiRenderer.h  ImGuiShader.cpp  MainMenuOptions.h  Path.cpp  Path.h  Polygon.cpp  Polygon.h  Prefab.cpp  Prefab.h  SpriteEntity.cpp  SpriteEntity.h  UIContext.h  UserInputController.cpp  UserInputController.h  WorldFile.cpp  WorldFile.h  WorldSerializer.cpp  WorldSerializer.h  main.cpp
Editor/ObjectProxies/: EntityProxy.cpp  EntityProxy.h  PathProxy.cpp  PathProxy.h  PolygonProxy.cpp  PolygonProxy.h  PrefabProxy.cpp  PrefabProxy.h
Editor/Tools/: CameraTool.cpp  CameraTool.h  ITool.h  PathTool.cpp  PathTool.h  PolygonBrushTool.cpp  PolygonBrushTool.h  PolygonTool.cpp  PolygonTool.h  RotateTool.cpp  RotateTool.h  TranslateTool.cpp  TranslateTool.h
Editor/Visualizers/: GrabberVisualizer.cpp  GrabberVisualizer.h  GridVisualizer.cpp  GridVisualizer.h  PolygonVisualizer.cpp  PolygonVisualizer.h
External Libs/Lua-5.1.4/: loslib.c  lua.c
External Libs/stb_truetype/: stb_truetype.h
External Libs/zed_net/: zed_net.h
External Libs/zlib-1.2.8/: gzlib.c  gzread.c  gzwrite.c
Game/: AIKnowledge.cpp  AIKnowledge.h  AnimatedDude.cpp  AnimatedDude.h  AnimatedDudeController.cpp  AnimatedDudeController.h  CacoDemon.cpp  CacoDemon.h  CacoDemonController.cpp  CacoDemonController.h  CubeSwarm.cpp  CubeSwarm.h  DamageController.cpp  DamageController.h  DotEntity.cpp  DotEntity.h  Enemy.cpp  Enemy.h  EntityFlags.h  Explosion.cpp  Explosion.h  FireBullet.cpp  FireBullet.h  GameContext.h  IWeaponSystem.h  InvaderEntity.cpp  InvaderEntity.h  InvaderGroup.cpp  InvaderGroup.h  Meteor.cpp  Meteor.h  Moon.cpp  Moon.h  Morpher.cpp  Morpher.h  OpenGLSetup.cpp  OscillatingLine.cpp  OscillatingLine.h  PathPoint.cpp  PathPoint.h  (+21 more)
Game/Effects/: SmokeEffect.cpp  SmokeEffect.h  TrailEffect.cpp  TrailEffect.h
Game/Enemies/: BlackSquareController.cpp  CacoDemonController.cpp  Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  InvaderController.cpp  InvaderController.h  RyuController.cpp  RyuController.h
Game/Events/: DamageEvent.h  GameEventFuncFwd.h  RemoveEntityEvent.h  RemovePhysicsEntityEvent.h  ShockwaveEvent.h  SpawnConstraintEvent.h  SpawnEntityEvent.h  SpawnPhysicsEntityEvent.h
Game/Hud/: Healthbar.cpp  Healthbar.h  Overlay.h
Game/Monster/: Arm.cpp  Arm.h  Head.cpp  Head.h  Leg.cpp  Leg.h  Monster.cpp  Monster.h
Game/Network/: RemoteConnection.cpp
Game/UpdateTasks/: CameraViewportReporter.cpp  GravityUpdater.cpp  HealthbarUpdater.cpp  ListenerPositionUpdater.cpp  ListenerPositionUpdater.h
Game/Weapons/: BaseWeapon.cpp  BaseWeapon.h  Bullet.cpp  Bullet.h  CacoPlasma.cpp  CacoPlasma.h  IWeaponSystem.h  RocketLauncher.cpp  RocketLauncher.h  StandardWeapon.cpp  StandardWeapon.h  Weapon.cpp  Weapon.h  WeaponConfiguration.h  WeaponFactory.cpp  WeaponFactory.h  WeaponTypes.h
Game/res/: AnimatedGuy.sprite  Explosion.sprite  Invader.sprite  Ryu.sprite  cacodemon.sprite  cacoexplosion.sprite  explosion.sprite  firebullet.sprite  invader.sprite  laser.sprite  level1.world  meteorite.sprite  moon.sprite  ryu.sprite  shuttle.sprite  something.lua  spritesheet.psd
Mono1.xcodeproj/: project.pbxproj
Mono1.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MonoEngine/: AnimatedSprite.cpp  AnimatedSprite.h  Color.cpp  Color.h  Engine.cpp  Engine.h  EntityBase.cpp  EntityBase.h  FpsCounter.cpp  GameController.cpp  GameController.h  Hash.h  IAction.h  ICamera.h  IDrawable.h  IEntity.h  IInputHandler.h  IOGLSetup.h  IPhysicsEntity.h  IPhysicsZone.h  IRenderer.h  IUpdatable.h  IUpdater.h  IWindow.h  IZone.h  InputHandler.cp  InputHandler.cpp  InputHandler.h  LuaInterpreter.cpp  LuaInterpreter.h  MonoEngine-Prefix.pch  MonoEngineTarget.xcconfig  MonoFwd.h  MonoPtrFwd.h  OGLRenderer.cpp  OGLRenderer.h  PhysicsEntityBase.cpp  PhysicsEntityBase.h  PhysicsZone.cpp  PhysicsZone.h  (+14 more)
MonoEngine/Audio/: AudioFactory.cpp  AudioFactory.h  AudioListener.cpp  AudioListener.h  AudioSystem.cpp  AudioSystem.h  ISound.h  open_al.h
MonoOSX/: Info.plist
MonoiOS/: Info.plist  MonoiOS copy-Info.plist
Resources/: editor_config.json  editor_entities.json  editor_prefabs.json  world.objects  world.paths  world.prefabs  world.world
SDL iOS Application/: Info.plist  main.cpp
Shared/: WorldFile.cpp  WorldFile.h
UnitTests/: ColorTest.cpp  EngineTest.cpp  EventHandlerTest.cpp  EventHandlerTest.h  HashTest.cpp  LuaTest.cpp  MathTest.cpp  MatrixTest.cpp  ObjectMatrixTest.cpp  PathTest.cpp  RandomTest.cpp  SoundTest.cpp  StringFunctionsTest.cpp
src/: Engine.cpp  Engine.h  Entity.h  EntitySystem.cpp  EntitySystem.h  Hash.h  IGameSystem.h  IUpdatable.h  IUpdater.h  InputHandler.cpp  InputHandler.h  MonoFwd.h  MonoPtrFwd.h  SystemContext.h  TransformSystem.cpp  TransformSystem.h  Updater.cpp  Updater.h  main.cpp
src/Math/: Quad.h  (+16 more)
tests/: ActiveVectorTest.cpp  AlgorithmTest.cpp  CameraTest.cpp  CircularVectorTest.cpp  ColorTest.cpp  EngineTest.cpp  EventHandlerTest.cpp  HashTest.cpp  MathTest.cpp  MatrixTest.cpp  NetworkTest.cpp  ObjectPoolTest.cpp  PathTest.cpp  RandomTest.cpp  SoundTest.cpp  SpriteSerializeTest.cpp  UuidTest.cpp  main.cpp
(+706 files in other folders)
